2004-02-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tga.c (ReadTGAImage): Fix matte channel handling. For
	16-bit packets, use integer rather than floating point. Return
	gray images as PseudoClass and set is_grayscale flag.  Add
	logging.
	* magick/fx.c (WaveImage): Ensure that image is
	DirectClass. Ensure that matte channel is initialized if
	necessary. Include background color in is_grayscale evaluation.
	* magick/gem.c (GenerateNoise): Scale noise to range of quantum.

2004-02-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jp2.c (WriteJP2Image): Support passing all documented
	Jasper options using -define.

2004-02-13  Peter Boos  <pedib@colorfullife.com>

	* coders/wmf.c (util_draw_arc): Fixes to improve handling for pie,
	arc, and chord.  These fixes produce correct output for
	wmf/examples/fjftest.wmf, but it is not known if they are correct
	for all cases.

2004-02-12  Tim Hunter  <cyclists@nc.rr.com>

	* magick/profile.c (SetImageProfile): Bug fixes.

2004-02-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (UnregisterXPMImage): Unregister PICON registration.

2004-02-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/Makefile.am (label_la_LDFLAGS): Add a dependency on the
	math library since floor() is used.
	* wand/magick_wand.c (MagickRemoveImageProfile): Use C comments in
	C files.
	* magick/constitute.c (MapQuantumType): Fix spurious comma in
	enum definition.
	* magick/blob.c (GetBlobStreamHandler): Apparently return type can
	not be const.

2004-02-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Check for Windows fonts under
	/usr/X11R6/lib/X11/fonts/truetype (XFree86 standard location?).
	* coders/jp2.c (WriteJP2Image): Support providing a compression
	rate value (range 0.0 to 1.0) using command line syntax similar to
	'-define jp2:rate=0.5'.  In Magick++ this option may be accessed
	similar to image.defineValue("jp2","rate","0.5");